# abb-capstone

./: .gitignore  README.md  basler.py  cam.py  opencv-pipeline.ipynb  pipeline.ipynb  pyproject.toml  run.py
abbvisionsystem/: __init__.py  app.py
abbvisionsystem/camera/: __init__.py  calibration.py  calibration_widget.py  camera.py  camera_interface.py
abbvisionsystem/models/: __init__.py  base_model.py  custom_model.py  defect_detection_model.py  taco_model.py
abbvisionsystem/preprocessing/: preprocessing.py
abbvisionsystem/utils/: __init__.py  visualization.py
abbvisionsystem/vision_tools/: blob_analysis.py  edge_detection.py  line_max.py  pattern_matching.py  vision_interface.py  vision_widget.py
