[project]
name = "abbvisionsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Duc Le",email = "s4000577@rmit.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pypylon (>=4.1.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "keras (>=3.9.2,<4.0.0)",
    "ultralytics (>=8.3.131,<9.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "anomalib (>=2.0.0,<3.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "kornia (>=0.8.1,<0.9.0)",
    "openvino (>=2025.1.0,<2026.0.0)",
    "timm (>=1.0.15,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "freia (>=0.2,<0.3)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
