[project]
name = "abbvisionsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Duc Le",email = "s4000577@rmit.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "pypylon (>=4.1.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "keras (>=3.9.2,<4.0.0)",
    "ultralytics (>=8.3.131,<9.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "kornia (>=0.8.1,<0.9.0)",
    "timm (>=1.0.15,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "freia (>=0.2,<0.3)",
    "anomalib[pytorch] (>=2.0.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "open-clip-torch (>=2.32.0,<3.0.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "torchmetrics (>=1.7.1,<2.0.0)",
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "albumentations (>=2.0.7,<3.0.0)",
    "onnx (>=1.18.0,<2.0.0)",
    "onnxruntime (>=1.22.0,<2.0.0)",
    "gradio (>=5.31.0,<6.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "wandb (>=0.19.11,<0.20.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "ftfy (>=6.3.1,<7.0.0)",
    "regex (>=2024.11.6,<2025.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
